force-app/main/default/objects/Twilio_Setting__mdt/Twilio_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Twilio API Setting</label>
    <pluralLabel>Twilio API Settings</pluralLabel>
</CustomObject>