force-app/main/default/objects/Twilio_Setting__mdt/fields/OnCo_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>OnCo_Account_SID__c</fullName>
    <label>Account SID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>