force-app/main/default/objects/Twilio_Setting__mdt/fields/OnCo_Account_Token__c.field-meta.xml
<CustomField>
    <fullName>OnCo_Account_Token__c</fullName>
    <label>Account Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>