force-app/main/default/objects/Twilio_Setting__mdt/fields/OnCo_From_Number__c.field-meta.xml
<CustomField>
    <fullName>OnCo_From_Number__c</fullName>
    <label>From Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>